added Microsoft.AspNetCore.WebUtilities package and moved styling into Overview.razor

--- a/DAM.Presentation/Pages/Overview.razor
+++ b/DAM.Presentation/Pages/Overview.razor
@@ -3,9 +3,46 @@
 @rendermode  InteractiveServer
 @inject NavigationManager NavigationManager
 
-<link rel="stylesheet" href="Overview.css" />
-
 <PageTitle>DAM Overview</PageTitle>
+
+<style>
+    body {
+        text-align: center;
+    }
+
+    h1 {
+        margin-bottom: 10px;
+    }
+
+    .search-container {
+        margin-bottom: 20px;
+    }
+
+    .search-container input {
+        width: 80%;
+        max-width: 400px;
+        padding: 10px;
+        font-size: 16px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+
+    .gallery {
+        margin: 10px;
+        display: grid;
+        gap: 10px;
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .gallery img {
+        width: 20vw;
+        height: 20vw; /* Forces square scaling */
+        border-radius: 5px;
+        object-fit: cover;
+        border: 2px solid #000000;
+        padding: 1vw;
+    }
+</style>
 
 <div style="visibility: @(_isLoaded ? "visible" : "hidden")">
     <div style="text-align: left">
@@ -21,12 +58,12 @@
         {
             <div class="image-container" @onclick="@(e => OnImageClickNavigateTo(@product.ProductId))">
                 <img src="@product.Url" alt="Placeholder Image">
-                
+
                 <p>@($"{product.Name}")</p>
                 <p>@($"{product.ProductId}")</p>
-            </div>   
+            </div>
         }
-    </div>   
+    </div>
 </div>
 
 
@@ -39,7 +76,7 @@
     protected override void OnInitialized ()
     {
         base.OnInitialized();
-        
+
         MockProducts();
     }
 
@@ -57,34 +94,34 @@
     {
 
         string[] names = [
-            @"Lenovo LoQ - 15.6"" | RTX 4070 | AMD Ryzen™ 7 7435HS | 24GB | 1TB", 
-            @"Kingston FURY Beast DDR5-6400 - 64GB - CL32 - Dual Channel (2 pcs) - AMD EXPO & Intel XMP - Sort", 
-            @"Canon EOS R10 + RF-S 18-45mm F4.5-6.3 IS STM", 
-            @"Logitech G502 HERO - Gaming Mus - Optisk - 11 knapper - Sort med RGB lys", 
+            @"Lenovo LoQ - 15.6"" | RTX 4070 | AMD Ryzen™ 7 7435HS | 24GB | 1TB",
+            @"Kingston FURY Beast DDR5-6400 - 64GB - CL32 - Dual Channel (2 pcs) - AMD EXPO & Intel XMP - Sort",
+            @"Canon EOS R10 + RF-S 18-45mm F4.5-6.3 IS STM",
+            @"Logitech G502 HERO - Gaming Mus - Optisk - 11 knapper - Sort med RGB lys",
             @"Pro HDMI - Micro HDMI 2.0 - Skærmkabel - 5m - Sort",
-            @"Steelseries Apex Pro Tkl Wireless Gen Gaming Tastatur Uden Numpad Nordisk Sort", 
-            @"Shure SM7B Vokalmikrofon", 
-            @"Apple MacBook Air - 13.6"" | M4 | 16GB | 256GB | Sky Blue", 
-            @"Samsung 990 Pro SSD - 2TB - Uden køleprofil - M.2 2280 - PCIe 4.0", 
+            @"Steelseries Apex Pro Tkl Wireless Gen Gaming Tastatur Uden Numpad Nordisk Sort",
+            @"Shure SM7B Vokalmikrofon",
+            @"Apple MacBook Air - 13.6"" | M4 | 16GB | 256GB | Sky Blue",
+            @"Samsung 990 Pro SSD - 2TB - Uden køleprofil - M.2 2280 - PCIe 4.0",
             @"Samsung Galaxy S25+ 256GB/12GB - Navy",
-            @"Nothing Phone (3a) 256GB/12GB - Black", 
-            @"Philips Hue Bevægelsessensor", 
+            @"Nothing Phone (3a) 256GB/12GB - Black",
+            @"Philips Hue Bevægelsessensor",
             @"Logitech G560 - 2.1 Kanal - Sort"];
         string[] imageUrls = ["https://www.proshop.dk/Images/300x251/3265125_d00b1b375815.png",
-        "https://www.proshop.dk/Images/300x251/3252630_38e96b07e036.jpg",
-        "https://www.proshop.dk/Images/1600x1200/3102491_92f88358cdc7.jpg",
-        "https://www.proshop.dk/Images/300x251/2680952_2efbf2afedac.jpg",
-        "https://www.proshop.dk/Images/1600x1200/2971893_fcc1fb5d76e9.jpg",
-        "https://www.proshop.dk/Images/300x251/3335683_de5c27e34603.jpg",
-        "https://www.proshop.dk/Images/300x251/2932782_67111a5120c1.png",
-        "https://www.proshop.dk/Images/300x251/3351366_51c3ddce1fee.jpg",
-        "https://www.proshop.dk/Images/1600x1200/3103447_4ee041b928cb.png",
-        "https://www.proshop.dk/Images/1600x1200/3329203_e893d1988125.png",
-        "https://www.proshop.dk/Images/1600x1200/3336300_41c7badbc96b.jpg",
-        "https://www.proshop.dk/Images/1600x1200/2990958_944ae001f3cd.png",
-        "https://www.proshop.dk/Images/1600x1200/2649079_16e9f65de615.jpg"
+            "https://www.proshop.dk/Images/300x251/3252630_38e96b07e036.jpg",
+            "https://www.proshop.dk/Images/1600x1200/3102491_92f88358cdc7.jpg",
+            "https://www.proshop.dk/Images/300x251/2680952_2efbf2afedac.jpg",
+            "https://www.proshop.dk/Images/1600x1200/2971893_fcc1fb5d76e9.jpg",
+            "https://www.proshop.dk/Images/300x251/3335683_de5c27e34603.jpg",
+            "https://www.proshop.dk/Images/300x251/2932782_67111a5120c1.png",
+            "https://www.proshop.dk/Images/300x251/3351366_51c3ddce1fee.jpg",
+            "https://www.proshop.dk/Images/1600x1200/3103447_4ee041b928cb.png",
+            "https://www.proshop.dk/Images/1600x1200/3329203_e893d1988125.png",
+            "https://www.proshop.dk/Images/1600x1200/3336300_41c7badbc96b.jpg",
+            "https://www.proshop.dk/Images/1600x1200/2990958_944ae001f3cd.png",
+            "https://www.proshop.dk/Images/1600x1200/2649079_16e9f65de615.jpg"
         ];
-        
+
         string[] productIds = ["0ae877ea-e04b-4819-b933-e9dd2ea291b3",
             "708a7331-3072-4c1d-8344-e5e8f1a18bef",
             "0aad21e1-5ba7-43f7-8367-d3cae88c3c7b",
@@ -98,7 +135,7 @@
             "b3d49e5e-6c4a-4e16-9016-56177c52fac2",
             "9d8cfa78-306f-44f3-b160-f0805720d3de",
             "a597942a-a841-4e1c-b30b-4799c71c3eb1"];
-        
+
         for(int i = 0; i < imageUrls.Length ; i++){
             products.Add(new Product
             {
@@ -113,7 +150,7 @@
     {
         NavigationManager.NavigateTo("/");
     }
-    
+
     public void OnImageClickNavigateTo(string productId)
     {
         NavigationManager.NavigateTo($"/dam/edit?productId={productId}");
