Added http ting
Co-authored-by: Magnus Mackenhauer <magnusmack8@gmail.com>
Co-authored-by: Emil Jørgensen <Emilioso007@users.noreply.github.com>

--- a/DAM.Presentation/Pages/Edit.razor
+++ b/DAM.Presentation/Pages/Edit.razor
@@ -1,6 +1,10 @@
 @page "/dam/edit"
 @inject NavigationManager Navigation
 
+<style>
+
+</style>
+
 <head>
     <link rel="stylesheet" href="Edit.css" />
 </head>
@@ -38,6 +42,5 @@ else
     public class Image ()
     {
         private string url { get; set; }
-        
     }
 }
