Add Assets and Main pages with image upload functionality

--- a/DAM.Presentation/Pages/Edit.razor
+++ b/DAM.Presentation/Pages/Edit.razor
@@ -1,9 +1,5 @@
-@page "/dam/edit"
+﻿@page "/dam/edit"
 @inject NavigationManager Navigation
-
-<style>
-
-</style>
 
 <head>
     <link rel="stylesheet" href="Edit.css" />
@@ -41,6 +37,6 @@ else
     
     public class Image ()
     {
-        private string url { get; set; }
+        
     }
 }
