--- a/DAM.Presentation/Pages/Home.razor
+++ b/DAM.Presentation/Pages/Home.razor
@@ -1,7 +1,7 @@
-@page "/dam"
+﻿@page "/"
 
-<h3>Home</h3>
+<PageTitle>Home</PageTitle>
 
-@code {
-    
-}
+<h1>Hello, world!</h1>
+
+Welcome to your new app.
