--- a/DAM.Presentation/Components/Pages/Asset/Assets.razor
+++ b/DAM.Presentation/Components/Pages/Asset/Assets.razor
@@ -77,6 +77,7 @@
         <button @onclick="() => NavigateToPage(pageNumber - 1)">Previous page</button>
         <button @onclick="() => NavigateToPage(pageNumber + 1)">Next Page</button>
         <button @onclick="SearchButton">Search</button>
+        <button @onclick="ToggleTagMenu">Select Tags</button> 
         <InputFile OnChange="CreateService.UploadImage" accept="image/*" />
     </div>
     
