--- a/DAM.Presentation/Components/Pages/Product/Products.razor
+++ b/DAM.Presentation/Components/Pages/Product/Products.razor
@@ -1,4 +1,5 @@
 ﻿@page "/dam/products"
+@using global::DAM.Presentation.EnhancedModels
 @using global::DAM.Presentation.Models
 @attribute [StreamRendering]
 @rendermode  InteractiveServer
@@ -60,10 +61,10 @@
     <!-- Search bar -->
     <InputText class="form-control" @bind-Value="@searchProduct" @oninput="HandleSearch" placeholder="Search by product name, id or image tag..."/>
     <div class="gallery" id="imageGrid">
-        @foreach(Product product in FilteredProducts())
+        @foreach(EnhancedProduct product in FilteredProducts())
         {
             <div class="image-container" @onclick="@(e => OnImageClickNavigateTo(@product.UUID.ToString()))">
-                <img src="" alt="Placeholder Image">
+                <img src="@(product.MainAssetUrl)" alt="Placeholder Image">
 
                 <p>@($"{product.Name}")</p>
                 <p>@($"{product.UUID}")</p>
