Refactor services to inherit from BaseService which simplifies a lot. Update backend to allow searching for assets with both uuid and tag together with pagination at the same time. Generally a bunch of refactoring in the frontend. Now using Guid instead of string where applicable.

--- a/DAM.Presentation/Components/Pages/Asset/Edit.razor
+++ b/DAM.Presentation/Components/Pages/Asset/Edit.razor
@@ -38,6 +38,7 @@
 
 <section>
     <h1>Asset edit page</h1>
+    <img src="@ReadService.GetAssetContentById(_assetId)" alt="Asset image" style="object-fit: contain"/>
     <p><strong>Image ID:</strong>@_assetId</p>
 </section>
 
