--- a/DAM.Presentation/Components/Pages/Asset/Assets.razor
+++ b/DAM.Presentation/Components/Pages/Asset/Assets.razor
@@ -15,19 +15,13 @@
         margin-bottom: 20px;
     }
 
-    {
-        width: 80%
-    ;
-        max-width: 400px
-    ;
-        padding: 10px
-    ;
-        font-size: 16px
-    ;
-        border: 1px solid #ccc
-    ;
-        border-radius: 5px
-    ;
+    .search-container input {
+        width: 80%;
+        max-width: 400px;
+        padding: 10px;
+        font-size: 16px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
     }
 
     .gallery {
@@ -46,7 +40,7 @@
         padding: 1vw;
         transition: opacity 1s ease-in-out, transform 1s ease-in-out;
     }
-    
+
     .gallery img:hover{
         transform: scale(1.05);
     }
@@ -59,52 +53,45 @@
         margin-top: 10px;
         max-width: 300px;
     }
-    
 </style>
 
 <PageTitle>Assets Overview</PageTitle>
 
-<div style="visibility: @(_isLoaded ? "visible" : "hidden")">
+<div style="text-align: left">
+    <button @onclick="NavigateToHome">Home</button>
+</div>
+<div>
+    <h1>Assets Gallery</h1>
+    <input value="@_searchText" @oninput="OnSearchInputChanged" placeholder="Search for assets by uuid"/>
+    <button @onclick="ToggleTagMenu">Select Tags</button> 
+    <InputFile OnChange="UploadAsset" accept="image/*" />
+</div>
 
-    <div style="text-align: left">
-        <button @onclick="NavigateToHome">Home</button>
-    </div>
-    <div>
-        <h1>Assets Gallery</h1>
-        <InputText @bind-Value="searchText" placeholder="Search for assets"/>
-        <InputNumber @bind-Value="size">number of products to show</InputNumber>
-        <p>@pageNumber</p>
-        <button @onclick="() => NavigateToPage(pageNumber - 1)">Previous page</button>
-        <button @onclick="() => NavigateToPage(pageNumber + 1)">Next Page</button>
-        <button @onclick="SearchButton">Search</button>
-        <button @onclick="ToggleTagMenu">Select Tags</button> 
-        <InputFile OnChange="CreateService.UploadImage" accept="image/*" />
-    </div>
-    
-    @if (showTagMenu)
-    {
-        <div class="tag-menu">
-            <h4>Filter with Tags</h4>
-            @foreach (var tag in allTags)
-            {
-                <label style="display: block;">
-                    <input type="checkbox"
-                           checked="@selectedTags.Contains(tag.Name)"
-                           @onchange="(e) => OnTagFilterChanged(tag.Name, (bool?) e.Value == true)"/>
-                    @tag.Name
-                </label>
-            }
-            <button @onclick="ApplyFilter">Apply Filter</button>
-        </div>
-    }
-
-    <div class="gallery" id="imageGrid">
-        @foreach (string src in imageSources)
+@if (_showTagMenu)
+{
+    <div class="tag-menu">
+        <h4>Filter with Tags</h4>
+        @foreach (var tag in _allTags)
         {
-            <div class="image-container" @onclick="@(e => OnImageClickNavigateTo(src))">
-                <img loading="lazy" src="@src" alt="Placeholder Image"/>
-                <p></p>
-            </div>
+            <label style="display: block;">
+                <input type="checkbox"
+                       checked="@_selectedTagIds.Contains(tag.UUID)"
+                       @onchange="(e) => OnTagFilterChanged(tag.UUID, (bool?) e.Value == true)"/>
+                @tag.Name
+            </label>
         }
     </div>
+}
+
+<div class="gallery" id="imageGrid">
+    @foreach (Guid assetId in _assetsIds)
+    {
+        <div>
+            <div class="image-container" @onclick="@(_ => Navigation.NavigateTo($"/dam/assets/edit?assetId={assetId}"))">
+                <img loading="lazy" src="@ReadService.GetAssetContentById(assetId)" alt="Placeholder Asset"/>
+            </div>
+            <p>@assetId</p>
+            <button @onclick="@(_ => DeleteAsset(assetId))">X</button>
+        </div>
+    }
 </div>
