Implement synchronization with PIM and update product gallery retrieval. Also, some Magnus frontend dev.

--- a/DAM.Presentation/Components/Pages/Asset/Assets.razor
+++ b/DAM.Presentation/Components/Pages/Asset/Assets.razor
@@ -91,7 +91,7 @@
                 <img loading="lazy" src="@ReadService.GetAssetContentById(assetId)" alt="Placeholder Asset"/>
             </div>
             <p>@assetId</p>
-            <button @onclick="@(_ => DeleteAsset(assetId))">X</button>
+            <button @onclick="@(_ => DeleteAsset(assetId))">🗑️</button>
         </div>
     }
 </div>
