--- a/DAM.Presentation/Components/Pages/Product/Products.razor
+++ b/DAM.Presentation/Components/Pages/Product/Products.razor
@@ -44,7 +44,9 @@
     }
 </style>
 
-<PageTitle>DAM Overview</PageTitle>
+<PageTitle>Products Overview</PageTitle>
+
+<button @onclick="SyncWithPim">Synchronize with PIM</button>
 
 <div style="visibility: @(_isLoaded ? "visible" : "hidden")">
     <div style="text-align: left">
