Enhance asset and product galleries with pagination and tag filtering

--- a/DAM.Presentation/Components/Pages/Asset/Edit.razor
+++ b/DAM.Presentation/Components/Pages/Asset/Edit.razor
@@ -66,7 +66,7 @@
         </div>
 
         <div class="gallery">
-            <SortableList Group="sharedLists" Items="_assetGallery" Context="tag" 
+            <SortableList Group="sharedLists" Items="_tagGallery" Context="tag" 
                           OnRemove="ListRemove" OnUpdate="ListReorder">
                 <SortableItemTemplate>
                     <div class="card has-border has-background-white img_in_gallery">
